// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownField rendering renders expected elements 1`] = `
<div
  className="DropDownField"
>
  <div
    className="DropDownField__label"
  >
    <Label
      id="random-id-label"
      text="Test"
    />
  </div>
  <Select
    aria-describedby="random-id-helper"
    aria-labelledby="random-id-label"
    className="DropDownField__select"
    error={false}
    getOptionKey={[MockFunction]}
    id="random-id"
    onChange={[MockFunction]}
    options={
      [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldHelper
    id="random-id-helper"
    text="Helper text"
  />
</div>
`;

exports[`DropDownField rendering renders expected elements when className is set 1`] = `
<div
  className="DropDownField TestClass"
>
  <div
    className="DropDownField__label"
  >
    <Label
      id="random-id-label"
      text="Test"
    />
  </div>
  <Select
    aria-describedby="random-id-helper"
    aria-labelledby="random-id-label"
    className="DropDownField__select"
    error={false}
    getOptionKey={[MockFunction]}
    id="random-id"
    onChange={[MockFunction]}
    options={
      [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldHelper
    id="random-id-helper"
  />
</div>
`;

exports[`DropDownField rendering renders expected elements when error is set 1`] = `
<div
  className="DropDownField"
>
  <div
    className="DropDownField__label"
  >
    <Label
      id="random-id-label"
      text="Test"
    />
  </div>
  <Select
    aria-describedby="random-id-error"
    aria-labelledby="random-id-label"
    className="DropDownField__select"
    error={true}
    getOptionKey={[MockFunction]}
    id="random-id"
    onChange={[MockFunction]}
    options={
      [
        {
          "text": "Option 0",
          "value": "o0",
        },
        {
          "text": "Option 1",
          "value": "o1",
        },
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldError
    id="random-id-error"
    text="Error"
  />
</div>
`;
